--- a/code/UI/Base/Chatbox/PlatformerChatBox.scss
+++ b/code/UI/Base/Chatbox/PlatformerChatBox.scss
@@ -1,8 +1,10 @@
 ﻿
 @import "../../_vars.scss";
+
 iconpanel {
     font-family: "Material Icons";
 }
+
 platformerchatbox {
     position: absolute;
     bottom: 100px;
@@ -54,6 +56,9 @@ platformerchatbox {
     .chat_canvas {
         flex-direction: column;
         align-items: flex-start;
+        overflow: scroll;
+        max-height: 520px;
+        min-height: 100px;
     }
 
     &.open {
@@ -67,6 +72,11 @@ platformerchatbox {
         textentry {
             opacity: 1;
             width: 120%;
+            cursor: text;
+        }
+
+        .faded {
+            opacity: 1;
         }
     }
 }
@@ -74,7 +84,7 @@ platformerchatbox {
 platformerchatentry {
     margin-bottom: 16px;
     color: white;
-    transition: all 0.1s ease-out;
+    transition: transform 0.1s ease-out, opacity 0.1s ease-out;
     opacity: 1;
     max-height: 200px;
     flex-shrink: 0;
