--- a/code/UI/Base/World/PlatformerNameTags.scss
+++ b/code/UI/Base/World/PlatformerNameTags.scss
@@ -1,37 +1,19 @@
-﻿PlatformerNameTags {
-	position: absolute;
-	top: 0px;
-	right: 0px;
-	left: 0px;
-	bottom: 0px;
-	pixel-snap: 0;
+﻿NameTag {
+	justify-content: center;
+	align-items: center;
 
-	basenametag {
-		font-family: "Fredoka One";
-		position: absolute;
-		font-weight: 500;
+	.title {
+		font-family: "Nunito-Black";
+		font-size: 56px;
+		white-space: nowrap;
 		color: white;
-		background-color: rgba( 52,152,219,.5 );
-		font-size: 96px;
-		transform-origin: 50% -10%;
-		border-radius: 20px;
-		align-items: center;
-		justify-content: center;
-		flex-direction: row-reverse;
+	}
 
-
-		label {
-			padding: 5px 60px;
-			padding-left: 60px;
-		}
-
-		image {
-			width: 90px;
-			height: 90px;
-			margin: 20px;
-			margin-right: 0px;
-			margin-left: 20px;
-			border-radius: 20px;
-		}
+	.avatar {
+		width: 56px;
+		height: 56px;
+		margin-right: 15px;
+		border-radius: 100px;
+		background-size: cover;
 	}
 }
