--- a/code/UI/Tag/TagHud.scss
+++ b/code/UI/Tag/TagHud.scss
@@ -71,18 +71,7 @@ TagScore {
 
 TagRound {
     position: absolute;
-    left: 50%;
-    top: 140px;
-    padding: 10px 20px;
-    transform: translateX(-50%);
-    font-family: poppins;
-    background-color: rgb(255, 255, 255);
-    border-radius: 50px;
-    justify-content: center;
-    align-items: center;
-    font-size: 16px;
-    color: #607D8B;
-    font-family: Poppins;
-    font-weight: 800;
-    text-transform: uppercase;
+    right: 35%;
+    top: 48px;
+    margin-top: 10px;
 }
