--- a/code/UI/Hud.scss
+++ b/code/UI/Hud.scss
@@ -85,39 +85,34 @@ CourseTimer {
 
 CoinCurrent {
     position: absolute;
-    transform: rotate(-10deg);
-    left: 200px;
-    top: 65px;
-    padding: 0 0px;
+    right: 10%;
+    bottom: 6%;
+    padding: 0 20px;
     transition: all 0.25s ease-out;
-    flex-direction: row;
-    z-index: 2;
-    opacity: 0;
-
-    .coinimage {
-        position: absolute;
-        width: 65px;
-        aspect-ratio: 1;
-        top: -48px;
-        left: 1.5%;
-        border-radius: 50%;
-        border: 4px black;
-    }
+    z-index: 0;
+    border-radius: 20px 20px 0px 0px;
+    background-color: #fbf4e9;
+    min-width: 80px;
+    flex-grow: 1;
 
     .coinnumber {
-        position: absolute;
+        color: #87857e;
+        text-shadow: 0px 1px 0px #FFFFFF;
         font-family: "Nunito-Black";
-        text-stroke: 4px black;
-        transform: rotate(20deg);
-        left: 45px;
-        top: 2px;
-        font-size: 48px;
-        font-weight: bold;
-        color: #f1c40f;
-        height: 30px;
-        padding: 0 0px;
+        font-size: 24px;
         align-items: center;
         transition: all 0.25s ease-out;
+    }
+
+    .icon {
+        padding-right: 5;
+        color: #87857e;
+        text-shadow: 0px 1px 0px #FFFFFF;
+        font-family: Material Icons;
+        font-size: 24px;
+        align-items: center;
+        transition: all 0.25s ease-out;
+        opacity: 1;
     }
 
     &.Active {
