--- a/code/UI/Base/Area/NewArea.scss
+++ b/code/UI/Base/Area/NewArea.scss
@@ -1,20 +1,16 @@
 NewArea {
-    width: 100%;
-    height: 100%;
+
     position: absolute;
     opacity: 1;
-    z-index: 50;
     font-weight: 100;
+    left: 32px;
+    top: 32px;
 
     .destext {
-        font-family: 'Fredoka One';
+        font-family: Nunito-Black;
         color: #fff;
-        font-size: 16px;
-        text-stroke: 10px black;
+        font-size: 20px;
+        text-shadow: 0px 0px 2px rgba( black, 0.3 );
         color: #ecf0f1;
-        position: absolute;
-        top: 190px;
-        left: 10%;
-        transform: translateX(-50%);
     }
 }
