--- a/code/UI/Base/PlayerInfo/BlockBar.scss
+++ b/code/UI/Base/PlayerInfo/BlockBar.scss
@@ -11,6 +11,7 @@ BlockBar {
         font-size: 24px;
         color: white;
         font-family: Material Icons;
+        text-shadow: 0px 0px 2px rgba( black, 0.3 );
     }
 
     > .layout {
@@ -28,6 +29,7 @@ BlockBar {
             }
 
             &.active {
+                box-shadow: 0px 0px 10px rgba( black, 0.3 );
                 background-color: white;
             }
         }
@@ -39,5 +41,6 @@ BlockBar {
         margin-right: 16px;
         font-size: 22px;
         color: white;
+        text-shadow: 0px 0px 2px rgba( black, 0.3 );
     }
 }
