--- a/code/UI/Base/Chatbox/PlatformerChatBox.scss
+++ b/code/UI/Base/Chatbox/PlatformerChatBox.scss
@@ -27,12 +27,11 @@ platformerchatbox {
         background-color: $BGCream;
         border-radius: 32px;
         font-size: 18px;
-        flex-shrink: 0;
-        flex-grow: 0;
         width: 70%;
     }
 
     .sendbutton {
+        position: absolute;
         transition: all 0.1s ease;
         font-family: "Material Icons";
         font-size: 25px;
@@ -45,12 +44,13 @@ platformerchatbox {
         height: 40px;
         cursor: pointer;
         opacity: 0;
-        top: 46px;
-        z-index: 20;
+        top: 6px;
+        right: 8px;
     }
 
     .placeholder {
         color: $BGTxtFade;
+        text-shadow: 0px 1px 0px #FFFFFF;
     }
 
     .chat_canvas {
@@ -58,14 +58,13 @@ platformerchatbox {
         align-items: flex-start;
         overflow: scroll;
         max-height: 520px;
-        min-height: 100px;
+        min-height: 60px;
     }
 
     &.open {
         pointer-events: all;
 
         .sendbutton {
-            margin-left: 110%;
             opacity: 1;
         }
 
