--- a/code/UI/Base/Course/StatusCard.scss
+++ b/code/UI/Base/Course/StatusCard.scss
@@ -41,7 +41,7 @@
 
     > .main {
         border-radius: 0px 0px 20px 20px;
-        background-color: #fbf4e9;
+        background-image: linear-gradient(58deg, rgba(255, 243, 224, 1), rgba(255, 255, 255, 1) 80% );
 
         label {
             color: #d93f53;
@@ -55,17 +55,17 @@
     &.reverse-color {
         > .icon {
             label {
-                color: #3aafb9;
+                color: rgba(32, 184, 207, 1);
             }
         }
 
         > .header {
-            background-color: #3aafb9;
+            background-color: rgba(32, 184, 207, 1);
         }
 
         > .main {
             label {
-                color: #3aafb9;
+                color: rgba(32, 184, 207, 1);
             }
         }
     }
