--- a/code/ui/Base/Scoreboard/Scoreboard.scss
+++ b/code/ui/Base/Scoreboard/Scoreboard.scss
@@ -78,6 +78,16 @@
                 margin-top: 4px;
             }
 
+            .friend {
+                right: 16px;
+                top: 8px;
+                position: absolute;
+                font-family: Material Icons;
+                font-size: 24px;
+                color: lightgreen;
+                text-shadow: 1px 1px 2px rgba( black, 0.3 );
+            }
+
             .you {
                 position: absolute;
                 left: -60px;
