--- a/code/UI/Base/MapVote/MapIcon.scss
+++ b/code/UI/Base/MapVote/MapIcon.scss
@@ -3,70 +3,93 @@ $yellow: #ff0;
 $orange: #f70;
 
 mapicon {
-    background-color: red;
     margin: 10px;
     background-position: center;
     background-size: cover;
     width: 300px;
-    height: 500px;
+    height: 300px;
     cursor: pointer;
-    color: white;
-    text-stroke: 8px black;
-    border-radius: 25px;
     z-index: 99;
+    font-family: "Nunito-Black";
 
-    &:hover {
-        transform: scale( 1.02 );
-        opacity: 1;
-    }
-
-    .votes {
-        position: absolute;
-        bottom: 10px;
-        right: 10px;
-        background-color: rgba( black, 0.9 );
-        padding: 10px 15px;
-        border-radius: 3px;
-        font-weight: bold;
-        font-size: 32px;
-        min-height: 50px;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .info {
-        position: absolute;
-        top: 10px;
-        left: 10px;
-        background-color: rgba( black, 0.9 );
+    .icon {
         flex-direction: column;
-        padding: 5px;
-        border-radius: 3px;
+
+        .thumbnailicon {
+            background-position: center;
+            background-size: cover;
+            width: 300px;
+            height: 300px;
+        }
+
+        .title {
+            color: white;
+            font-weight: bolder;
+            padding: 5px;
+            font-size: 18px;
+            background-color: #d93f53;
+            border-radius: 20px 20px 0px 0px;
+            flex-shrink: 0;
+            text-align: center;
+            text-shadow: 0px 0px 2px rgba( black, 0.3 );
+        }
+
+        .votes {
+            position: absolute;
+            bottom: 0px;
+            right: 20px;
+            font-size: 22px;
+            justify-content: center;
+            align-items: center;
+            color: #d93f53;
+        }
+
+        .orgname {
+            font-size: 13px;
+            border-radius: 0px 0px 20px 20px;
+            background-image: linear-gradient(58deg, rgba(255, 243, 224, 1), rgba(255, 255, 255, 1) 80% );
+            color: #d93f53;
+            padding: 5px;
+            font-family: Nunito-Black;
+            font-size: 18px;
+            text-align: center;
+            flex-shrink: 0;
+        }
 
         .orgavatar {
             position: absolute;
-            left: 5px;
+            left: 20px;
             bottom: 5px;
-            width: 40px;
-            height: 40px;
+            width: 38px;
+            height: 38px;
             border-radius: 4px;
             background-color: black;
             background-position: center;
             background-size: cover;
+            border: 2px solid #F9F8E8;
+            z-index: 5;
+            box-shadow: 2px 2px 10px rgba( black, 0.5 );
         }
 
-        .title {
-            font-weight: bolder;
-            margin-left: 50px;
-            font-size: 20px;
-        }
-
-        .orgname {
-            font-weight: bolder;
-            margin-left: 50px;
-            font-size: 13px;
-            color: #f1c40f;
-            text-stroke: 6px black;
+        &:hover {
+            transform: scale( 1.02 );
+            opacity: 1;
         }
     }
+}
+
+
+
+
+
+
+.info {
+    position: absolute;
+    top: -38px;
+    left: 10px;
+    flex-direction: column;
+    padding: 5px;
+    border-radius: 3px;
+    background-color: aliceblue;
+    z-index: 10;
 }
